@@ -155,6 +155,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\libcaes\libcaes_crypt.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libcaes\libcaes_error.c"
 				>
 			</File>
@@ -178,6 +182,10 @@
 			>
 			<File
 				RelativePath="..\..\libcaes\libcaes_context.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcaes\libcaes_crypt.h"
 				>
 			</File>
 			<File
